2003-10-31  Borut Razem <borut.razem@siol.net>

	* src/SDCC.lex: sdcc now understands both formats:
	  '# <line_number> <file_name>' and
	  '#line <line_number> <file_name>'
	* support/cpp2/cppmain.c: sdcpp now generates the standard
	  '# <line_number> <file_name>' instead of former
	  '#line <line_number> <file_name>'

2003-10-30  Borut Razem <borut.razem@siol.net>

	* support/cpp2/cpphash.h,
	* support/cpp2/cpplib.h
	* support/cpp2/cpplex.c,
	* support/cpp2/cppmain.c,
	* support/cpp2/cppinit.c: fixed bug #828015 - Syntax variation for _asm character constants

2003-10-30 Erik Petrich <epetrich@ivorytower.norman.ok.us>

	Fixed a number of problems revealed by bug #827883.
	* src/SDCCloop.c (loopInvariants): Spill location of the
	result operand should be recomputed if extracted from
	a loop. Also, don't extract assignments of an iTemp
	from a literal.
	* src/SDCCast.c (isConformingBody): loop reversal should
	not occur if the control variable is involved with a
	relational operator.

2003-10-28 Bernhard Held <bernhard@bernhardheld.de>

	* .version: bumped to 2.3.6 to reflect the big improvements
	made by Erik and Klaus. Thanks!

2003-10-28 Klaus Flittner <klaus_flittner@gmx.de>

	Replaced the livrange code.
	* src/SDCClrange.c: added new LR code
	* src/SDCCloop.c,
	* src/SDCCBBlock.h: removed remainig parts from old LR code
	* src/ds390/ralloc.c,
	* src/ds390/gen.c: minor fixes to make it work with new code

2003-10-28 Erik Petrich <epetrich@ivorytower.norman.ok.us>

	* as/hc08/asm.h,
	* as/hc08/lkrloc.c,
	* src/hc08/gen.c,
	* src/hc08/ralloc.c: Fix various warnings related to the hc08
	* src/SDCCicode.c (geniCodePreInc, geniCodePreDec): Fixed bug #829717
	(tweaked fix for bug #818696)

2003-10-23 Erik Petrich <epetrich@ivorytower.norman.ok.us>

	* src/z80/ralloc.c (joinPushes): Fixed bug #828742

2003-10-23 Erik Petrich <epetrich@ivorytower.norman.ok.us>

	* src/SDCCmain.c,
	* sdccconf_in.h: Fixed bug #828387 (--disable-hc08-port didn't work)